dev/non_executable_reasons_record/191.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
%%bash
### å¤‰æ•°ã®è¨­å®š
name=ConnectDb
classpath=".:/root/git_jupyter_notebook/Java/postgresql-42.1.1.jar"
#classpath=".:/Users/ftakao2007/jupyter/jupyter_notebook/Java/postgresql-42.1.1.jar"

### ã‚½ãƒ¼ã‚¹ã®ç·¨é›†
cat <<- EOS > ${name}.java
import java.sql.Connection;
import java.sql.DriverManager;

class ${name} {
  static Connection getConnection() throws Exception{
    Connection con = null;
    
    //# æ¥ç¶š
    con = DriverManager.getConnection("jdbc:postgresql://localhost:5432/ftakao2007_development", "ftakao2007", "pass");
    //#con = DriverManager.getConnection("jdbc:postgresql://10.136.3.189:5432/jsd_development", "jsd", "pass");
    return con;
  }
}
EOS

### ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«(ãƒ‡ãƒãƒƒã‚°ç›®çš„ã€‚æœ¬æ¥ã¯ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«ã—ãªãã¦ã‚‚ä»–ã®ã‚³ãƒ¼ãƒ‰ã‚’ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«ã™ã‚‹ã¨è‡ªå‹•ã§ã“ã®ã‚³ãƒ¼ãƒ‰ã‚‚ã‚³ãƒ³ãƒ‘ã‚¤ãƒ«ã•ã‚Œã‚‹)
javac -encoding UTF-8 ${name}.java
------------------

[0;36m  File [0;32m"<ipython-input-1-3c37ac744c8b>"[0;36m, line [0;32m10[0m
[0;31m    cat <<- EOS > ${name}.java[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-1-3c37ac744c8b>, line 10)

Executability                            : False
